Continue inference and prediction

--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjzSztMNnrL1umxiOxQkgX"
+      "authorship_tag": "ABX9TyP55XMawVepl6L8hMiSR/Lw"
     },
     "kernelspec": {
       "name": "python3",
@@ -73,21 +73,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adJBl6dJKTHG",
-        "outputId": "7830b2bd-2410-433a-d59f-6829447987bd"
+        "outputId": "6b333cc4-ab28-49f9-a6d4-6573433b16bb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch version: 2.5.0+cu121\n",
-            "torchvision version: 0.20.0+cu121\n"
+            "torch version: 2.5.1+cu121\n",
+            "torchvision version: 0.20.1+cu121\n"
           ]
         }
       ],
@@ -149,9 +149,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fdb4231c-559a-4ce6-eb03-95e7ba0942b9"
+        "outputId": "64ed714b-215f-4d3b-9c68-1e528da32f43"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +165,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 26.4M/26.4M [00:03<00:00, 8.29MB/s]\n"
+            "100%|██████████| 26.4M/26.4M [00:01<00:00, 15.1MB/s]\n"
           ]
         },
         {
@@ -182,7 +182,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 29.5k/29.5k [00:00<00:00, 138kB/s]\n"
+            "100%|██████████| 29.5k/29.5k [00:00<00:00, 340kB/s]\n"
           ]
         },
         {
@@ -199,7 +199,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 4.42M/4.42M [00:01<00:00, 2.49MB/s]\n"
+            "100%|██████████| 4.42M/4.42M [00:00<00:00, 6.12MB/s]\n"
           ]
         },
         {
@@ -216,7 +216,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 5.15k/5.15k [00:00<00:00, 16.3MB/s]"
+            "100%|██████████| 5.15k/5.15k [00:00<00:00, 15.2MB/s]"
           ]
         },
         {
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2pLqYKfsTaNn",
-        "outputId": "c513ee83-5784-49b7-a558-b359e414821e"
+        "outputId": "25838912-31ec-4ccc-c881-c093f976191e"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -403,9 +403,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hgYmAMVhTjqa",
-        "outputId": "4ef6d0e1-68a7-4134-81ac-a539cd5c99b5"
+        "outputId": "3e2c75b1-8879-4de8-caf1-6a1b347582c5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +415,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -442,9 +442,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bpm3VK_4lmaT",
-        "outputId": "5b85dac6-f6e4-4955-dbcc-06eaa81fb861"
+        "outputId": "49c26ca9-73e0-4cd7-93ad-ea8cdbd0dcf3"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -465,7 +465,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -479,9 +479,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jlsVVwKM0fId",
-        "outputId": "28ea9d5f-7d10-47b1-a892-2e7afa9df842"
+        "outputId": "dd333152-6fb4-4a21-e620-6ec1b1a84fa0"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +491,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         }
       ]
     },
@@ -505,9 +505,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6rr0fFvm0fnx",
-        "outputId": "a230ee9c-cf21-4d1d-9e93-a4841bd295b8"
+        "outputId": "c82be74b-d171-4133-9a91-47a92f10653f"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +517,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
@@ -531,9 +531,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WDyb2PtmZQ3d",
-        "outputId": "4f2e68c5-72c7-474c-ea23-eac0f2950195"
+        "outputId": "77c45f83-913b-4949-ebfe-06275fc78f52"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -573,7 +573,7 @@
       "metadata": {
         "id": "eyBvLfz_5lGp"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -587,12 +587,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 489
         },
         "id": "IAj01toF5L5_",
-        "outputId": "e4a9c4a3-9b18-47f4-995a-73223293be72"
+        "outputId": "27323944-2118-4fdd-ba4b-eaa88226af4b"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +609,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -634,12 +634,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 469
+          "height": 470
         },
         "id": "kpGHmhYO6osD",
-        "outputId": "09177d36-d627-47ee-aacc-b9d21ffe3a8e"
+        "outputId": "71a00ebf-60a7-4bc0-d1dd-edd46615ac5b"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +649,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 11
         },
         {
           "output_type": "display_data",
@@ -684,12 +684,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 663
+          "height": 752
         },
         "id": "ijFChqeSamEn",
-        "outputId": "d5f699d1-c616-46a7-cfb1-7126dcfa0c8a"
+        "outputId": "c4e6b508-8f5d-4de0-b6f2-92e45a7c9766"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,7 +743,7 @@
       "metadata": {
         "id": "nhOAOicSr94L"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -766,17 +766,17 @@
       "metadata": {
         "id": "4J9JbUswr9pS"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f9c5f8c4-47ac-45f4-d675-814cb9636b48",
+        "outputId": "fb3eb68c-7680-4670-eb4e-d80c729b5086",
         "id": "2JVuP9BosFee"
       },
       "outputs": [
@@ -784,7 +784,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<torch.utils.data.dataloader.DataLoader object at 0x7f211765fd90> <torch.utils.data.dataloader.DataLoader object at 0x7f211765f520>\n"
+            "<torch.utils.data.dataloader.DataLoader object at 0x7ef91ce77220> <torch.utils.data.dataloader.DataLoader object at 0x7ef91ce775e0>\n"
           ]
         }
       ],
@@ -794,13 +794,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DQWjOhMrZ6Lj",
-        "outputId": "54bf2fd8-b6bc-434b-c5bf-1d25be525ddf"
+        "outputId": "dd7312f3-a3f5-4c1a-bd59-8155dab2723a"
       },
       "outputs": [
         {
@@ -819,13 +819,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hm-kCOBGaPSl",
-        "outputId": "1ecd8350-7c24-4cf1-a104-50af43740342"
+        "outputId": "9c64279a-b4cd-432c-9c93-d85bbb135618"
       },
       "outputs": [
         {
@@ -846,14 +846,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 465
         },
         "id": "W8kb1kXljo_n",
-        "outputId": "ed971439-1462-47b4-99e5-2c45b918b8a5"
+        "outputId": "21f70863-1896-4e5c-f191-a9499366cd12"
       },
       "outputs": [
         {
@@ -911,13 +911,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FJwl7rVMPsjD",
-        "outputId": "d7219f9c-c47d-430e-a8f7-7425e6b8ef88"
+        "outputId": "23ee1a53-f27e-4e1e-86fb-4e6c3c79734b"
       },
       "outputs": [
         {
@@ -948,7 +948,7 @@
       "metadata": {
         "id": "qh-ZafQP96EJ"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -969,7 +969,7 @@
       "metadata": {
         "id": "s_KSpiGd-9uG"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -983,9 +983,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oipg-6_lP_un",
-        "outputId": "7cc69476-e49e-420c-903d-26ea8aea308e"
+        "outputId": "1271e182-10b5-4415-e655-b8695cf52220"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1027,9 +1027,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5CiNpSCTPvSk",
-        "outputId": "64701990-4c76-4f46-fe66-8ad90ae3ea75"
+        "outputId": "baf63b25-858b-4622-b240-ed7769ca225e"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
       "metadata": {
         "id": "iVGy4c4QQlFb"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1095,9 +1095,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xw8WrXq9WpOh",
-        "outputId": "d201a5c2-8dfb-4930-ffd6-1fe2602633bb"
+        "outputId": "c329dc97-1a01-4a6a-e4c2-b76607aae752"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,15 +1118,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "99763d12-a6af-418d-a299-333b11b14ca7"
+        "outputId": "31f404d4-bbb5-4a93-a359-fdc8f4f26a10"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/926.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m921.6/926.4 kB\u001b[0m \u001b[31m28.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m926.4/926.4 kB\u001b[0m \u001b[31m18.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/926.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m921.6/926.4 kB\u001b[0m \u001b[31m100.8 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m926.4/926.4 kB\u001b[0m \u001b[31m22.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
@@ -1140,7 +1140,7 @@
       "metadata": {
         "id": "vnWUdqVliJq2"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1151,7 +1151,7 @@
       "metadata": {
         "id": "OZV6PvceiveR"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1164,7 +1164,7 @@
       "metadata": {
         "id": "48CmCTDKXkoY"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1193,7 +1193,7 @@
       "metadata": {
         "id": "nXNPKPbXjCnb"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1215,7 +1215,7 @@
       "metadata": {
         "id": "WTQWWgsB9sEG"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1245,7 +1245,7 @@
       "metadata": {
         "id": "7mE0rizv-SEJ"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1325,7 +1325,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eccaec33-5785-4b5d-c98a-45efa76e97d6"
+        "outputId": "f9f181a0-eb66-409b-b913-b4f6f484107e"
       },
       "execution_count": null,
       "outputs": [
@@ -1344,23 +1344,7 @@
             "Train loss: 0.59039 | Test loss: 0.50954 | Accuracy: 0.82039\n",
             "Epoch: 1\n",
             "-------\n",
-            "Looked at 0/60000 samples\n",
-            "Looked at 12800/60000 samples\n",
-            "Looked at 25600/60000 samples\n",
-            "Looked at 38400/60000 samples\n",
-            "Looked at 51200/60000 samples\n",
-            "\n",
-            "Train loss: 0.47633 | Test loss: 0.47989 | Accuracy: 0.83197\n",
-            "Epoch: 2\n",
-            "-------\n",
-            "Looked at 0/60000 samples\n",
-            "Looked at 12800/60000 samples\n",
-            "Looked at 25600/60000 samples\n",
-            "Looked at 38400/60000 samples\n",
-            "Looked at 51200/60000 samples\n",
-            "\n",
-            "Train loss: 0.45503 | Test loss: 0.47664 | Accuracy: 0.83427\n",
-            "Train time on cpu= 40.527 seconds\n"
+            "Looked at 0/60000 samples\n"
           ]
         }
       ]
@@ -1409,7 +1393,29 @@
         "    Returns:\n",
         "        (dict): The resulting predictions of the model on the dataloader.\n",
         "    \"\"\"\n",
-        "\n"
+        "\n",
+        "    loss, acc = 0, 0\n",
+        "\n",
+        "    model.eval()\n",
+        "\n",
+        "    with torch.inference_mode():\n",
+        "        for X, y in data_loader:\n",
+        "            preds = model(X)\n",
+        "            loss += loss_fn(preds, y)\n",
+        "            acc += accuracy_fn(\n",
+        "                preds = preds,\n",
+        "                target = y\n",
+        "            )\n",
+        "\n",
+        "        # Average loss and accuracy per batch\n",
+        "        loss /= len(data_loader)\n",
+        "        acc /= len(data_loader)\n",
+        "\n",
+        "    return {\n",
+        "        \"model_name\": model.__class__.__name__,\n",
+        "        \"model_loss\": loss.item(),\n",
+        "        \"model_accuracy\": acc\n",
+        "    }"
       ],
       "metadata": {
         "id": "Zy_f-RHGXn_p"
