Continue inference and prediction

--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP55XMawVepl6L8hMiSR/Lw"
+      "authorship_tag": "ABX9TyM5TQZIRNJxPIwCNzte4HDX"
     },
     "kernelspec": {
       "name": "python3",
@@ -684,7 +684,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 752
+          "height": 663
         },
         "id": "ijFChqeSamEn",
         "outputId": "c4e6b508-8f5d-4de0-b6f2-92e45a7c9766"
@@ -1327,7 +1327,7 @@
         },
         "outputId": "f9f181a0-eb66-409b-b913-b4f6f484107e"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,7 +1344,23 @@
             "Train loss: 0.59039 | Test loss: 0.50954 | Accuracy: 0.82039\n",
             "Epoch: 1\n",
             "-------\n",
-            "Looked at 0/60000 samples\n"
+            "Looked at 0/60000 samples\n",
+            "Looked at 12800/60000 samples\n",
+            "Looked at 25600/60000 samples\n",
+            "Looked at 38400/60000 samples\n",
+            "Looked at 51200/60000 samples\n",
+            "\n",
+            "Train loss: 0.47633 | Test loss: 0.47989 | Accuracy: 0.83197\n",
+            "Epoch: 2\n",
+            "-------\n",
+            "Looked at 0/60000 samples\n",
+            "Looked at 12800/60000 samples\n",
+            "Looked at 25600/60000 samples\n",
+            "Looked at 38400/60000 samples\n",
+            "Looked at 51200/60000 samples\n",
+            "\n",
+            "Train loss: 0.45503 | Test loss: 0.47664 | Accuracy: 0.83427\n",
+            "Train time on cpu= 44.985 seconds\n"
           ]
         }
       ]
@@ -1366,7 +1382,8 @@
         "  2. dataloader\n",
         "  3. loss function\n",
         "  4. accuracy function\n",
-        "- The function should use the data in the dataloader and the model to make predictions and then evaluate those predictions with the loss and accuracy functions.\n"
+        "- The function should use the data in the dataloader and the model to make predictions and then evaluate those predictions with the loss and accuracy functions.\n",
+        "- Use the results of this function to compare different models.\n"
       ],
       "metadata": {
         "id": "UrQV2VxyBaFK"
@@ -1414,14 +1431,58 @@
         "    return {\n",
         "        \"model_name\": model.__class__.__name__,\n",
         "        \"model_loss\": loss.item(),\n",
-        "        \"model_accuracy\": acc\n",
+        "        \"model_accuracy\": acc.item()\n",
         "    }"
       ],
       "metadata": {
         "id": "Zy_f-RHGXn_p"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate model_0\n",
+        "\n",
+        "res = eval_model(\n",
+        "    model = model_0,\n",
+        "    data_loader = test_dataloader,\n",
+        "    loss_fn = loss_fn,\n",
+        "    accuracy_fn = accuracy_fn\n",
+        ")\n",
+        "\n",
+        "res"
+      ],
+      "metadata": {
+        "id": "W_blxD-TFd6C",
+        "outputId": "f08d1db2-3be7-4a5b-f980-d2912cb8f9fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'model_name': 'FashionMNISTModelV0',\n",
+              " 'model_loss': 0.47663894295692444,\n",
+              " 'model_accuracy': 0.8342651724815369}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "-tZyARB_GPk_"
+      }
     },
     {
       "cell_type": "markdown",
