--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5TQZIRNJxPIwCNzte4HDX"
+      "authorship_tag": "ABX9TyMjkASPUuFZbRkv4ZcBAkwe"
     },
     "kernelspec": {
       "name": "python3",
@@ -1146,20 +1146,9 @@
     {
       "cell_type": "code",
       "source": [
-        "device= \"cuda\" if torch.cuda.is_available() else \"cpu\""
-      ],
-      "metadata": {
-        "id": "OZV6PvceiveR"
-      },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "loss_fn= nn.CrossEntropyLoss()\n",
         "optimizer= torch.optim.SGD(params= model_0.parameters(), lr= 0.1)\n",
-        "accuracy_fn= torchmetrics.Accuracy(task= \"multiclass\", num_classes= len(class_names)).to(device)"
+        "accuracy_fn= torchmetrics.Accuracy(task= \"multiclass\", num_classes= len(class_names)).to(\"cpu\")"
       ],
       "metadata": {
         "id": "48CmCTDKXkoY"
@@ -1455,11 +1444,11 @@
         "res"
       ],
       "metadata": {
-        "id": "W_blxD-TFd6C",
-        "outputId": "f08d1db2-3be7-4a5b-f980-d2912cb8f9fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W_blxD-TFd6C",
+        "outputId": "f08d1db2-3be7-4a5b-f980-d2912cb8f9fa"
       },
       "execution_count": 37,
       "outputs": [
@@ -1479,10 +1468,52 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# Non-linear Model"
+      ],
       "metadata": {
         "id": "-tZyARB_GPk_"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Turning the code to the device-agnostic mode\n",
+        "\n",
+        "device= \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "device"
+      ],
+      "metadata": {
+        "id": "glP3gvZ0dVVR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Does our data need non-linearity?\n",
+        "  - Linear = straight\n",
+        "  - Non-linear = non-straight"
+      ],
+      "metadata": {
+        "id": "fT8ZBMNZsWG4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FashionMNISTModelV1(nn.Module):\n",
+        "\n",
+        "    def __init__(self, input_shape:int, hidden_units:int, output_shape:int):\n",
+        "        super().__init__()\n",
+        ""
+      ],
+      "metadata": {
+        "id": "2fmv4r6ReZcS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
