--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjkASPUuFZbRkv4ZcBAkwe"
+      "authorship_tag": "ABX9TyOkdpRlI0Is3AGRKLoZSHEM"
     },
     "kernelspec": {
       "name": "python3",
@@ -1507,7 +1507,16 @@
         "\n",
         "    def __init__(self, input_shape:int, hidden_units:int, output_shape:int):\n",
         "        super().__init__()\n",
-        ""
+        "        self.layers_stack = nn.Sequential(\n",
+        "            nn.Flatten(),\n",
+        "            nn.Linear(in_features=input_shape, out_features=hidden_units),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(in_features=hidden_units, out_features=output_shape),\n",
+        "            nn.ReLU()\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x:torch.Tensor):\n",
+        "        return self.layers_stack(x)"
       ],
       "metadata": {
         "id": "2fmv4r6ReZcS"
