--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkdpRlI0Is3AGRKLoZSHEM"
+      "authorship_tag": "ABX9TyPQLi5e0arFqiL5wU5oOh2v"
     },
     "kernelspec": {
       "name": "python3",
@@ -1521,8 +1521,54 @@
       "metadata": {
         "id": "2fmv4r6ReZcS"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- In ML, it is a good practice to start with a baseline model then experiment changing one thing after another.\n",
+        "- This time, we added non-linear functions."
+      ],
+      "metadata": {
+        "id": "xCiWQW6kRZLJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Instantiate model_1\n",
+        "\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "model_1 = FashionMNISTModelV1(\n",
+        "    input_shape = 784,\n",
+        "    hidden_units = 10,\n",
+        "    output_shape = len(class_names)\n",
+        ").to(device)\n",
+        "\n",
+        "next(model_1.parameters()).device"
+      ],
+      "metadata": {
+        "id": "WNEMiUqSRLGG",
+        "outputId": "73cf3294-1ac2-4bdb-fd60-990a99be7957",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cpu')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "markdown",
