--- a/Computer_Vision.ipynb
+++ b/Computer_Vision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQLi5e0arFqiL5wU5oOh2v"
+      "authorship_tag": "ABX9TyPMcAPrBW9ny0M8i6l+pzw9"
     },
     "kernelspec": {
       "name": "python3",
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -151,7 +151,7 @@
         },
         "outputId": "64ed714b-215f-4d3b-9c68-1e528da32f43"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
         "id": "2pLqYKfsTaNn",
         "outputId": "25838912-31ec-4ccc-c881-c093f976191e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +405,7 @@
         "id": "hgYmAMVhTjqa",
         "outputId": "3e2c75b1-8879-4de8-caf1-6a1b347582c5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,7 +444,7 @@
         "id": "bpm3VK_4lmaT",
         "outputId": "49c26ca9-73e0-4cd7-93ad-ea8cdbd0dcf3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +481,7 @@
         "id": "jlsVVwKM0fId",
         "outputId": "dd333152-6fb4-4a21-e620-6ec1b1a84fa0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +507,7 @@
         "id": "6rr0fFvm0fnx",
         "outputId": "c82be74b-d171-4133-9a91-47a92f10653f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +533,7 @@
         "id": "WDyb2PtmZQ3d",
         "outputId": "77c45f83-913b-4949-ebfe-06275fc78f52"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +573,7 @@
       "metadata": {
         "id": "eyBvLfz_5lGp"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +592,7 @@
         "id": "IAj01toF5L5_",
         "outputId": "27323944-2118-4fdd-ba4b-eaa88226af4b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +639,7 @@
         "id": "kpGHmhYO6osD",
         "outputId": "71a00ebf-60a7-4bc0-d1dd-edd46615ac5b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -689,7 +689,7 @@
         "id": "ijFChqeSamEn",
         "outputId": "c4e6b508-8f5d-4de0-b6f2-92e45a7c9766"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -743,7 +743,7 @@
       "metadata": {
         "id": "nhOAOicSr94L"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,12 +766,12 @@
       "metadata": {
         "id": "4J9JbUswr9pS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -794,7 +794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -819,7 +819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -846,7 +846,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -911,7 +911,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -948,7 +948,7 @@
       "metadata": {
         "id": "qh-ZafQP96EJ"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -969,7 +969,7 @@
       "metadata": {
         "id": "s_KSpiGd-9uG"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -985,7 +985,7 @@
         "id": "oipg-6_lP_un",
         "outputId": "1271e182-10b5-4415-e655-b8695cf52220"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1029,7 @@
         "id": "5CiNpSCTPvSk",
         "outputId": "baf63b25-858b-4622-b240-ed7769ca225e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
       "metadata": {
         "id": "iVGy4c4QQlFb"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1097,7 @@
         "id": "Xw8WrXq9WpOh",
         "outputId": "c329dc97-1a01-4a6a-e4c2-b76607aae752"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,7 +1120,7 @@
         },
         "outputId": "31f404d4-bbb5-4a93-a359-fdc8f4f26a10"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,7 +1140,7 @@
       "metadata": {
         "id": "vnWUdqVliJq2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1153,7 +1153,7 @@
       "metadata": {
         "id": "48CmCTDKXkoY"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1182,7 +1182,7 @@
       "metadata": {
         "id": "nXNPKPbXjCnb"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1204,7 +1204,7 @@
       "metadata": {
         "id": "WTQWWgsB9sEG"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1234,7 +1234,7 @@
       "metadata": {
         "id": "7mE0rizv-SEJ"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1316,7 +1316,7 @@
         },
         "outputId": "f9f181a0-eb66-409b-b913-b4f6f484107e"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1426,7 +1426,7 @@
       "metadata": {
         "id": "Zy_f-RHGXn_p"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1450,7 +1450,7 @@
         "id": "W_blxD-TFd6C",
         "outputId": "f08d1db2-3be7-4a5b-f980-d2912cb8f9fa"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1521,7 +1521,7 @@
       "metadata": {
         "id": "2fmv4r6ReZcS"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1556,7 +1556,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1569,6 +1569,70 @@
           "execution_count": 43
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Setup loss, optimizer, and evaluation metrics"
+      ],
+      "metadata": {
+        "id": "uFTbDmcig820"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loss_fn = nn.CrossEntropyLoss()\n",
+        "\n",
+        "optimizer = torch.optim.SGD(\n",
+        "    params = model_1.parameters(),\n",
+        "    lr = 0.1\n",
+        ")\n",
+        "\n",
+        "accuracy_fn = torchmetrics.Accuracy(\n",
+        "    task = \"multiclass\",\n",
+        "    num_classes = len(class_names)\n",
+        ").to(device)"
+      ],
+      "metadata": {
+        "id": "CLdO2ygPhN_N"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Creating a function for the loop of training and testing"
+      ],
+      "metadata": {
+        "id": "SV8_T8sb1Irq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ad5WqmLP3c0h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Phn0FtoV3b1k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "loGu908zj0wW"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
